# ChangeLog for app-shells/zshrc-mv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*zshrc-2.6 (09 Aug 2013)

  09 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.5 (04 Aug 2013)

  04 Aug 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.4 (09 Jun 2013)

  09 Jun 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.3 (19 May 2013)

  19 May 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.2 (09 Apr 2013)

  09 Apr 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.1 (07 Apr 2013)

  07 Apr 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-2.0 (23 Mar 2013)

  23 Mar 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support solarized if SOLARIZED is set.

*zshrc-1.7 (21 Feb 2013)

  21 Feb 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.6 (26 Jan 2013)

  26 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.5 (24 Jan 2013)

  24 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.4 (19 Jan 2013)

  19 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.3 (14 Jan 2013)

  14 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.2 (12 Jan 2013)

  12 Jan 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*zshrc-1.1 (06 Jan 2013)

  06 Jan 2013; Martin Väth <martin@mvath.de>:
  New ebuild from scratch.