@@ -1,1 +1,1 @@
-DIST zshrc-mv-2.6.tar.gz 8146 SHA256 9af7cc9d2fa289537d89fdad9572008de7df2e6f858c1f2fcdd8e07069090708 SHA512 19ecfa913934102092281ae7264b420e22ebc77d5d2b79fcaecf9dac9b5edd05bb24d4b1ce4dbc0f9baec67e49f90353328bc2e24f194b76712e57fc13e2d6b6 WHIRLPOOL a46cc483cc30ab8cc16733e5cb80b59a8ea00047637946e3979de903d10fb58f7387dfb4ba374c564bac1d16ed23807f3b564e0fd95cfa8a075852adf5813a46
+DIST zshrc-mv-2.7.tar.gz 8184 SHA256 9ee0061756249911e6f9ceeb1c3d8de8b1cbd5f3ebe5465391856cae5bfaccb4 SHA512 23a846300791bb8c6621ad7018573b91536c93d85745301d76b5c250a65ef06c80229b190af07ffe448e43d1c14076fab43b8059be926c820ca67a4162416be3 WHIRLPOOL 3b24a3a4cc535c010487f8bc4222ae9798adc67686bb9b77b52434aa5d417e135e96d9900238500fbaf806abbb29ffc242537f9290112ec47357e13c023f9ef7
