@@ -86,19 +86,19 @@ pkg_postinst() {
 		then	ewarn "To use ${PN} activate aufs in your kernel. Use e.g. sys-fs/aufs*"
 		fi;;
 	esac
-	local i ok=false
-	for i in ${REPLACING_VERSIONS}
-	do	case ${i} in
-		[0-9].*|1[01].*|12.[0-6])	continue;;
-		esac
-		ok=:
-		break
-	done
-	${ok} || elog "Please adopt ${EPREFIX}/etc/conf.d/${PN} to your needs"
+	case " ${REPLACING_VERSIONS}" in
+	' '[0-9][0-9][0-9]*|' '[2-9][0-9]*|' '1[3-9]*|' '12.[0-9][0-9]*|' '12.[7-9]*) :;;
+	*)	elog "Please adopt ${EPREFIX}/etc/conf.d/${PN} to your needs.";;
+	esac
 	if ! has_version sys-fs/squashfs-tools[progress-redirect]
 	then	elog "For better output of ${PN}, it is recommended to install"
-		elog "sys-fs/squashfs-tools from the mv overlay with USE=progress-redirect"
+		elog "sys-fs/squashfs-tools from the mv overlay with USE=progress-redirect."
 	fi
 	has_version app-shells/runtitle || elog \
-		"Install app-shells/runtitle to let ${PN} update the status bar"
+		"Install app-shells/runtitle to let ${PN} update the status bar."
+	case " ${REPLACING_VERSIONS}" in
+	' '[0-9][0-9][0-9]*|' '[2-9][0-9]*|' '1[4-9]*|' '13.[0-9][0-9]*|' '13.[3-9]*) :;;
+	*)	elog "It is recommended to put into your zshrc the line:"
+		elog "alias squash_dir='noglob squash_dir'";;
+	esac
 }
