@@ -1,1 +1,1 @@
-DIST squashmount-2.6.tar.gz 29320 SHA256 7c54967c52a4c1a710006622b7ff2299570540e8fd60896a215c84e9836c610f SHA512 a1ffc9a961b55ae7315539e44ee19a9c49a0e596cdd9441b326ac9d1c3c8c1fc7e16d0790d21f7267db5c0319a9e8e6dfda0cbd522e31b072e3e1dedeab9ff5e WHIRLPOOL a0060d8750e9aebbce9ee033e95e0b495603bea6163d4ce5e6c2b042241fd7c9aaab04d9a3f1de6d52cda0357b5dfc782c108602bab1487fbfc4f12931079866
+DIST squashmount-2.7.tar.gz 31242 SHA256 84b203be18d49a41be06836b7e89c719f1384bbd505d807962d61ca93352d7af SHA512 222888932846d286a2339ccec8d46d6b9f9c8281837ed70ec49d5e98b3a55049cc93fd48aa1780e1b6315db70c2c5c77c8305ac3be80f9d0e6cde68e98702d6f WHIRLPOOL 6a2cf5163755b48a00ab33e42821840b05d35c9e108deba22ea0784a43a5aef82ce3b82db8d2d057d525e30d6846386064913492da18893dbfef976ff9c57b22
