@@ -34,6 +34,8 @@ src_install() {
 	systemd_dounit systemd/system/*
 	insinto /etc
 	doins etc/*
+	insinto /usr/lib/tmpfiles.d
+	doins tmpfiles.d/*
 	if use zsh-completion
 	then	insinto /usr/share/zsh/site-functions
 		doins zsh/*
@@ -43,14 +45,19 @@ src_install() {
 pkg_postinst() {
 	if ! has_version sys-fs/squashfs-tools[progress-redirect]
 	then	elog "For better output of ${PN}, it is recommended to install"
-		elog "sys-fs/squashfs-tools from the mv overlay with USE=progress-redirect"
+		elog "sys-fs/squashfs-tools from the mv overlay with USE=progress-redirect."
 	fi
 	has_version app-shells/runtitle || elog \
-		"Install app-shells/runtitle to let ${PN} update the status bar"
+		"Install app-shells/runtitle to let ${PN} update the status bar."
 	has_version dev-perl/File-Which || elog \
-		"${PN} strongly recommends to install dev-perl/File-Which"
+		"${PN} strongly recommends to install dev-perl/File-Which."
 	has_version '>=dev-lang/perl-5.14' || has_version perl-core/Term-ANSIColor || {
 		elog "For colored output install virtual/perl-Term-ANSIColor or"
 		elog "alternatively upgrade to >=dev-lang/perl-5.14"
 	}
+	case " ${REPLACING_VERSIONS}" in
+	' '[0-9][0-9]*|' '[3-9]*|' '2.[0-9][0-9]*|' '2.[7-9]*) :;;
+	*)	elog "It is recommended to put into your zshrc the line:"
+		elog "alias squashmount='noglob squashmount'";;
+	esac
 }
